--- a/Bitcoin_Trend.Rmd
+++ b/Bitcoin_Trend.Rmd
@@ -1,40 +1,47 @@
 
+
 ```{r}
 setwd("~/Desktop/Crypto_Analysis-master/Supplemental")
 source("custom_functions.R")
-load("bitcoin_history_all.RDA")
-btc.df.new = crypto_history(coin="Bitcoin",start_date='20180812') %>% dplyr::rename(price = close) %>% dplyr::select(date,price)
-btc.df = btc.df  %>% bind_rows(btc.df.new)
-library(cowplot)
+load("all_coins.RDA")
+btc.df.new = crypto_history(coin="Bitcoin",start_date='20190705') %>% dplyr::rename(price = close) %>% dplyr::select(date,price)
+btc.df = all_coins %>% filter(name=="Bitcoin") %>% select(-name) %>% bind_rows(btc.df.new)
 ```
+
 
 
 all bear markets comparison
 ```{r}
 btc.df1 = btc.df %>% filter(date >= as.Date("2011-06-08") & date <= as.Date("2013-02-22")) %>%
 	mutate(time = "June 08, 2011 - Feb 22, 2013")
-btc.df2 = btc.df %>% filter(date >= as.Date("2013-11-30") & date <= as.Date("2017-01-06")) %>%
-	mutate(time = "Nov 30, 2013 - Jan 06, 2017")
+btc.df2 = btc.df %>% filter(date >= as.Date("2013-11-30") & date <= as.Date("2017-01-04")) %>%
+	mutate(time = "Nov 30, 2013 - Jan 04, 2017")
 btc.df3 = btc.df %>% filter(date >= as.Date("2017-12-16")) %>%
-	mutate(time = "Dec 16, 2017 - Now")
+	mutate(time = paste0("Dec 16, 2017 -", as.character(format(Sys.Date(),"%B %d, %Y"))))
 
 
 all = bind_rows(btc.df1,btc.df2,btc.df3) %>% group_by(time) %>% mutate(change = (price - max(price))/max(price),
 	x = seq(1:n()))
-all$time = factor(all$time, levels=rev(unique(all$time)))
+all$time = factor(all$time, levels=unique(all$time))
 
 mins = all %>% group_by(time) %>% summarize(change = min(change))
 
 ggplot(all, aes(x=x,y=change,color=time)) + 
+    geom_hline(data=mins,aes(yintercept=change,color=time),alpha=0.5)+
 	geom_line()+
-	theme_bw() +
-	#geom_smooth(method="loess",se=FALSE,span=0.95,size=1.5,alpha=0.3)+
+	theme_classic() +
 	xlab("")+
-    theme(legend.position="bottom")+
-	geom_hline(data=mins,aes(yintercept=change,color=time))+
-	scale_x_continuous("Days since ATH",breaks=seq(0,2000,50))+
+	scale_x_continuous("Days since start of bear market",breaks=seq(0,2000,100))+
 	scale_color_manual("", values = c("red","green","blue"))+
-	scale_y_continuous("% Change from ATH",labels=scales::percent_format(accuracy=1), breaks=seq(-1,0,0.1))
+	scale_y_continuous("Percent change from \n start of bear market",labels=scales::percent_format(accuracy=1), breaks=seq(-1,0,0.1))+
+	background_grid(major = "xy", minor = "none")+ 
+theme(legend.position="bottom",panel.background = element_blank(),
+ 	  strip.background = element_rect(colour=NA, fill=NA),
+      panel.border = element_rect(fill = NA, color = "black"),
+	  legend.title = element_blank(),
+      axis.text=element_text(face="bold"),
+      axis.title = element_text(face="bold"),
+	  plot.title = element_text(face = "bold", hjust = 0.5))
 
 ```
 
@@ -42,19 +49,33 @@ ggplot(all, aes(x=x,y=change,color=time)) +
 
 bitcoin log scale
 ```{r}
+# for regression line
 btc.df2 = btc.df %>% filter(!(date >= as.Date("2011-02-22") & date <= as.Date("2011-8-22"))) %>%
 	filter(!(date >= as.Date("2013-01-28") & date <= as.Date("2015-01-04"))) %>%
-	filter(!(date >= as.Date("2017-05-07") & date <= as.Date("2018-11-26")))
-btc.df2$date[nrow(btc.df2)] = as.Date("2019-05-01")
-btc.df2$price[nrow(btc.df2)] = 7000
+	filter(!(date >= as.Date("2017-05-07") & date <= as.Date("2018-11-26"))) %>%
+	filter(date > as.Date("2010-10-01")) %>%
+	filter(date < as.Date("2019-03-01")) 
+btc.df2$date[nrow(btc.df2)] = as.Date("2019-10-01")
+btc.df2$price[nrow(btc.df2)] = 25000
+
+
 
 
 ggplot(btc.df, aes(date,price))+
+	stat_smooth(data = btc.df2, method="loess",span=0.95,size=1.5,color="lightblue")+
+	geom_hline(yintercept=c(29.6,1129,19497),color="green2",linetype="dotted",size=1.1)+
+	geom_vline(xintercept=as.Date(c("2017-12-16","2013-11-30","2011-06-08")),
+		color="green2",linetype="dotted",size=1.1)+	
+	geom_hline(yintercept=c(2.05,178,3237),color="red",alpha=0.75,linetype="dotted",size=1.1)+
+	geom_vline(xintercept=as.Date(c("2011-11-18", "2015-01-14", "2018-12-15")),
+		color="red",alpha=0.75,linetype="dotted",size=1.1)+	
+	#geom_vline(xintercept=as.Date(c("2012-11-28","2016-07-09","2020-05-19")),color="orange",linetype="dashed",size=1.1)+
 	geom_line(color="blue")+
-	scale_y_log10("BTC/USD",breaks=c(0.5,1,50,100,500,1000,5000,10000),labels=c("$0.5","$1","$50","$100","$500","$1,000","$5,000","$10,000"))+
+	scale_y_log10("BTC/USD",breaks=c(0.05,0.1,0.25,0.5,1,2.5,5,10,25,50,100,250,500,1000,2500,5000,10000,25000,50000,100000),
+		labels=c("$0.05","$0.1","$0.25","$0.5","$1","$2.5","$5","$10","$25","$50","$100","$250","$500","$1,000","$2,500","$5,000","$10,000","$25,000","$50,000","$100,000"),
+		limits=c(min(btc.df$price),100000))+
 	background_grid(major = "xy", minor = "none")+
-	stat_smooth(data = btc.df2, method="loess",span=0.99,color="lightblue")+
-	scale_x_date(breaks=pretty(btc.df$date,n=10), labels=date_format("%Y"))+
+	scale_x_date(breaks=pretty(btc.df$date,n=10), labels=date_format("%Y"),limits=c(min(btc.df$date),as.Date("2020-06-01")))+
 	xlab("")
 
 ```
@@ -62,45 +83,55 @@ ggplot(btc.df, aes(date,price))+
 
 compare to gold overlay all
 ```{r}
-library(readxl)
-gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date)) %>% filter(date >= as.Date("1974-01-01")) %>% mutate(item="Gold") %>%
-	mutate(x=date-as.Date("1974-01-02"), x= as.numeric(x), pct = (price-116.5)/116.5)
 
-sequence = seq(1,max(gold$x),17.2)
+library(readxl)
+gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date)) %>% filter( date >= as.Date("1975-08-01")) %>% mutate(item="Gold")
+gold$x = 1:nrow(gold)
+gold$pct = (gold$price - gold$price[1])/ gold$price[1]
+#gold2 = gold %>% filter(date <= as.Date("2005-05-01") & date >= as.Date("1970-01-01")) %>% mutate(item="Gold")
+btc2 = btc.df %>% filter(date >= as.Date("2017-09-01")) %>% mutate(item="BTC")
+btc2$x = 1:nrow(btc2)
+btc2$pct = (btc2$price - btc2$price[1])/ btc2$price[1]
+
+shrinkage = 11.9
+shifts = -8
+heights = 0.8
+
+
+sequence = seq(1,nrow(gold),shrinkage)
 gold2 = data.frame(x=rep(NA,length(sequence)),pct=rep(NA,length(sequence)))
 for (i in 1:length(sequence)){
-row = 	which.min(abs(gold$x-sequence[i]))
+row = which.min(abs(gold$x-sequence[i]))
 gold2$x[i] = gold$x[row]
 gold2$pct[i] = gold$pct[row]
 }
 gold2$item = "Gold"
-gold2$x = seq((134- which.max(gold2$pct[1:500])+3),nrow(gold2)+(134- which.max(gold2$pct[1:500])-1)+3)
-gold2$pct = gold2$pct -0.8
 
-btc2 = btc.df %>% filter(date >= as.Date("2017-08-05")) %>% 
-	mutate(item="Bitcoin")
-btc2$pct = (btc2$price-btc2$price[1])/btc2$price[1]
-btc2$x = seq(1,nrow(btc2)) 
+btc.peak = which.max(btc2$pct[1:250])
+gold.peak = which.max(gold2$pct[1:250])
+
+gold2$x = seq((btc.peak - gold.peak+shifts),(nrow(gold2)+(btc.peak - gold.peak+shifts-1)))
+gold2$pct = gold2$pct - heights
+
 btc.gold = bind_rows(gold2,(btc2 %>% select(x,pct,item,date,price)))
 
-
-x.lab = as.numeric(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05"))
+x.lab = pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05")
 
 ggplot(btc.gold,aes(x,pct))+
-	theme_bw()+
+		theme_classic()+
+background_grid(major = "xy", minor = "none")+
 	geom_line(aes(color=item))+
-	scale_x_continuous("",breaks=as.numeric(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05")), labels=attr(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05"),"labels"),limits=c(0,1020))+
+	scale_x_continuous("",breaks=as.numeric(x.lab), labels=attr(x.lab,"labels"),limits=c(0,1020))+
 	scale_y_continuous("BTC/USD",breaks=predict(lm(pct~price,btc2),data.frame(price=pretty(predict(lm(price~pct,btc2),data.frame(pct=0:16)),n=20))), labels=paste0("$",pretty(predict(lm(price~pct,btc2),data.frame(pct=0:16)),n=20)/1000,"k"))+
 	geom_dl(aes(label = item,color=item), method='last.bumpup', cex = 0.5, hjust = 1)+
-	theme(legend.position="none",
+	theme(panel.background = element_blank(),
+ 	  strip.background = element_rect(colour=NA, fill=NA),
+      panel.border = element_rect(fill = NA, color = "black"),
+		legend.position="none",
     		axis.ticks.length=unit(0.25,"cm"),
     		axis.text.x = element_text(angle = 45, hjust=1,face="bold",size=7),
-    		axis.text.y=element_text(face="bold",size=7)) 
-```
+    		axis.text.y=element_text(face="bold",size=7))
 
-scatterplot of percent change in btc vs gold
-```{r}
-ggplot(data.frame(gold=gold2$pct[8:(nrow(btc2)+7)],bitcoin=btc2$pct,x=1:nrow(btc2)),aes(bitcoin,gold))+geom_point(aes(color=x),alpha=0.6)
 ```
 
 
@@ -108,39 +139,66 @@ ggplot(data.frame(gold=gold2$pct[8:(nrow(btc2)+7)],bitcoin=btc2$pct,x=1:nrow(btc
 
 best scale for gold vs bitcoin
 ```{r}
-cuts = seq(16.2,17.6,0.2)
-shifts = seq(-15,6,3)
-heights = seq(0.4,1,0.2)
-hyper.df = expand.grid(cuts,shifts,heights) 
-colnames(hyper.df) = c("cuts","shifts","heights")
+
+library(readxl)
+gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date)) %>% filter(date <= as.Date("2009-01-20") & date >= as.Date("1975-08-01")) %>% mutate(item="Gold")
+gold$x = 1:nrow(gold)
+gold$pct = (gold$price - gold$price[1])/ gold$price[1]
+#gold2 = gold %>% filter(date <= as.Date("2005-05-01") & date >= as.Date("1970-01-01")) %>% mutate(item="Gold")
+btc2 = btc.df %>% filter(date >= as.Date("2017-09-01")) %>% mutate(item="BTC")
+btc2$x = 1:nrow(btc2)
+btc2$pct = (btc2$price - btc2$price[1])/ btc2$price[1]
+
+shrinkage = seq(11,12.4,0.1)
+shifts = seq(-12,-8,1)
+heights = seq(0,1,0.1)
+hyper.df = expand.grid(shrinkage,shifts,heights) 
+colnames(hyper.df) = c("shrinkage","shifts","heights")
 hyper.df$cor = rep(NA,nrow(hyper.df))
 hyper.df$rss = rep(NA,nrow(hyper.df))
 
 for (j in 1:nrow(hyper.df)){
-sequence = seq(1,max(gold$x),hyper.df$cuts[j])
+sequence = seq(1,nrow(gold),hyper.df$shrinkage[j])
 gold2 = data.frame(x=rep(NA,length(sequence)),pct=rep(NA,length(sequence)))
 for (i in 1:length(sequence)){
-row = 	which.min(abs(gold$x-sequence[i]))
+row = which.min(abs(gold$x-sequence[i]))
 gold2$x[i] = gold$x[row]
 gold2$pct[i] = gold$pct[row]
 }
 gold2$item = "Gold"
-gold2$x = seq((134- which.max(gold2$pct[1:500])+hyper.df$shifts[j]),nrow(gold2)+(134- which.max(gold2$pct[1:500])-1)+hyper.df$shifts[j])
+
+btc.peak = which.max(btc2$pct[1:250])
+gold.peak = which.max(gold2$pct[1:250])
+
+gold2$x = seq((btc.peak - gold.peak+hyper.df$shifts[j]),(nrow(gold2)+(btc.peak - gold.peak+hyper.df$shifts[j])-1))
+#gold2$x = seq(which.max(btc2$pct[1:250])-(which.max(gold2$pct[1:250])+hyper.df$shifts[j]),(nrow(gold2)+((which.max(btc2$pct[1:250])-which.max(gold2$pct[1:250])-1)+hyper.df$shifts[j])))
+#gold2$x = seq((134- which.max(gold2$pct[1:450])+hyper.df$shifts[j]),nrow(gold2)+(134- which.max(gold2$pct[1:450])-1)+hyper.df$shifts[j])
 gold2$pct = gold2$pct - hyper.df$heights[j]
 
 diff = gold2 %>% left_join(btc2,by="x") %>% na.omit() 
-hyper.df$rss[j] = sum((diff$pct.x - diff$pct.y)^2)
-hyper.df$cor[j] = cor.test(diff$pct.x,diff$pct.y)$estimate
+hyper.df$rss[j] = sum((diff$pct.x[-1:-100] - diff$pct.y[-1:-100])^2)
+hyper.df$cor[j] = cor.test(diff$pct.x[-1:-100],diff$pct.y[-1:-100])$estimate
 }
+View(hyper.df)
+
+ ggplot(hyper.df%>% filter(rss<350) %>%mutate(heights=as.character(heights)),aes(shrinkage,rss))+
+	geom_point(aes(color=heights))+
+	stat_smooth(aes(color=heights),se=F)
+
+  ggplot(hyper.df%>% filter(cor>0.65) %>%mutate(shifts=as.character(shifts)),aes(shrinkage,cor))+
+	geom_point(aes(color=shifts))+
+	stat_smooth(aes(color=shifts),se=F)
+ 
 ```
 
-plot side by side
+
+plot gold side by side
 ```{r}
 #plot gold
 library(readr)
 gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date))
-gold2 = gold %>% filter(date <= as.Date("2005-05-01") & date >= as.Date("1970-01-01")) %>% mutate(item="Gold")
-btc2 = btc.df %>% filter(date >= as.Date("2017-06-01")) %>% mutate(item="BTC")
+gold2 = gold %>% filter(date <= as.Date("2009-01-20") & date >= as.Date("1974-11-01")) %>% mutate(item="Gold")
+btc2 = btc.df %>% filter(date >= as.Date("2017-09-01")) %>% mutate(item="BTC")
 btc.gold = bind_rows(gold2,btc2)
 
 ggplot(btc.gold, aes(date,price))+
